.kubernetes/pgadmin/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin-deployment
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: achievements-pgadmin
          image: dpage/pgadmin4:6.7
          resources:
            requests:
              cpu: '100m'
              memory: '64Mi'
            limits:
              cpu: '100m'
              memory: '128Mi'
          readinessProbe:
            exec:
              httpGet:
                path: '/'
                port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
