.kubernetes/pgadmin/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'le-staging-wildcard-issuer'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/auth-url: 'https://auth.staging.etimo-test.live/oauth2/auth'
    nginx.ingress.kubernetes.io/auth-signin: 'https://auth.staging.etimo-test.live/oauth2/start?rd=https%3A%2F%2F${PGADMIN_URL}$request_uri'
spec:
  rules:
    - host: '${PGADMIN_URL}'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: pgadmin-service
                port:
                  number: 80
